# infolib

./: .gitignore  .pypirc  LICENSE  MANIFEST.in  README.md  README.rst  demo infolib last_ver.ipynb  infolib.ipynb  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: infolib-37-colab-checkpoint.ipynb
infolib/: __init__.py  infolib.py
infolib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infolib/.ipynb_checkpoints/: infolib-310-loc-01-checkpoint.py  infolib-checkpoint.py
staging/: data.csv
tests/: Demo infolib last_ver.ipynb  Test_0.0.11.ipynb  Untitled0.ipynb  infolib-310-loc-01.ipynb  infolib-310-loc-01.py  infolib-310-loc.ipynb  infolib-37-colab.ipynb  infolib.py
