[tool.poetry]
name = "infolib"
version = "0.1.0"
description = "\u0016A small, simple and sturdy library to overview our Pandas Dataframe"
authors = ["AntonelloManenti <antonellomanenti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3\u001b[D^3.7"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
python-math = "^0.0.1"
numpy = "^1.22.0"
pandas = "^1.3.5"
ipython = "^7.31.0"
more-itertools = "^8.12.0"
times = "^0.7"
psutil = "^5.9.0"
regex = "^2021.11.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
